--- a/Substation Builder/View/TheveninView.xaml
+++ b/Substation Builder/View/TheveninView.xaml
@@ -10,6 +10,7 @@
     <Border BorderThickness="2" CornerRadius="10" Margin="4,0,4,4" Padding="10,10,8,10" BorderBrush="#FF9C9595">
         <!-- Thevenin Template -->
         <StackPanel Width="214">
+            
             <StackPanel.Triggers>
                 <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                     <BeginStoryboard>
@@ -22,7 +23,7 @@
             
             <DockPanel>
                 <Label Width="44" Content="Name:" Opacity="0.9" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,1"/>
-                <TextBox Text="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Center" Opacity="0.9" Margin="4,0,4,2" Width="143"/>
+                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Center" Opacity="0.9" Margin="4,0,4,2" Width="143"/>
             </DockPanel>
 
             <Grid>
@@ -48,21 +49,21 @@
                             <ColumnDefinition Width="75"/>
                         </Grid.ColumnDefinitions>
                         <StackPanel Grid.Column="0">
-                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
                             <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
                         </StackPanel>
                         <StackPanel Grid.Column="1">
-                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
                             <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
                         </StackPanel>
                     </Grid>
