--- a/Substation Builder/View/TransformerView.xaml
+++ b/Substation Builder/View/TransformerView.xaml
@@ -31,22 +31,22 @@
                     <Label Content="High Voltage:" HorizontalContentAlignment="Right" Margin="4,2,0,2" Opacity="0.9"/>
                     <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="4,2,0,2" Opacity="0.9"/>
                     <Label Content="High Voltage Winding:" HorizontalContentAlignment="Right" Margin="4,2,0,2" Opacity="0.9"/>
-                    <Label Content="Low Voltage Winding:" HorizontalContentAlignment="Right" Margin="4,2,0,2" Opacity="0.9"/>
+                    <Label Content="Low Voltage Winding:" HorizontalContentAlignment="Right" Margin="4,2,0,4" Opacity="0.9"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1">
-                    <TextBox Text="{Binding Name}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Size1}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Size2}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding HighVoltage}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding LowVoltage}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                    <ComboBox Text="{Binding HighVoltageWndg}" Margin="0,2,4,2">
+                    <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding Size1, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding Size2, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding HighVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding LowVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                    <ComboBox Text="{Binding HighVoltageWndg, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2">
                         <ComboBoxItem Content="Delta"/>
                         <ComboBoxItem Content="Grounded Wye"/>
                         <ComboBoxItem Content="Ungrounded Wye"/>
                         <ComboBoxItem Content="Impedance Grounded Wye"/>
                     </ComboBox>
-                    <ComboBox Text="{Binding LowVoltageWndg}" Margin="0,2,4,2">
+                    <ComboBox Text="{Binding LowVoltageWndg, UpdateSourceTrigger=PropertyChanged}" Margin="0,2,4,2">
                         <ComboBoxItem Content="Delta"/>
                         <ComboBoxItem Content="Grounded Wye"/>
                         <ComboBoxItem Content="Ungrounded Wye"/>
@@ -54,43 +54,7 @@
                     </ComboBox>
                 </StackPanel>
             </Grid>
-
-            <Grid Margin="0,5,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="70"/>
-                </Grid.ColumnDefinitions>
-
-                <StackPanel Grid.Column="0" Margin="0,26,0,0">
-                    <Label Content="Z1%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="Z0%:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="Losses (kW):" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                </StackPanel>
-
-                <StackPanel Grid.Column="1">
-                    <RadioButton  GroupName="TransformerUnits" x:Name="XFUseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding z1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding z0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Losses}" Margin="4,1" Opacity="0.9"/>
-                </StackPanel>
-
-                <StackPanel Grid.Column="2" Margin="0,26,0,0">
-                    <Label Content="R1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X1:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="R0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                    <Label Content="X0:" HorizontalContentAlignment="Right" Margin="4,1,0,1" Opacity="0.9"/>
-                </StackPanel>
-
-                <StackPanel Grid.Column="3">
-                    <RadioButton  GroupName="TransformerUnits" x:Name="XFUseOhm" Content="Ohms" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding R1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding R0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                </StackPanel>
-            </Grid>
+            <Button Content="Impedance Data"/>
         </StackPanel>
     </Border>
 </Page>
