--- a/Substation Builder/View/SubstationView.xaml
+++ b/Substation Builder/View/SubstationView.xaml
@@ -3,7 +3,9 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Substation_Builder.View" x:Class="Substation_Builder.View.SubstationView"
+      xmlns:local="clr-namespace:Substation_Builder.View" 
+        xmlns:dm ="clr-namespace:Substation_Builder.Model"
+        x:Class="Substation_Builder.View.SubstationView"
       mc:Ignorable="d" 
       Title="Substation">
 
@@ -60,9 +62,9 @@
                     <Label Content="Low Voltage:" HorizontalContentAlignment="Right" Margin="4,1" Opacity="0.9"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1" Grid.ColumnSpan="2">
-                    <TextBox Text="{Binding MVA, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9"/>
-                    <TextBox Text="{Binding HighVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9"/>
-                    <TextBox Text="{Binding LowVoltage, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9"/>
+                    <TextBox Text="{Binding MVA}" Margin="4,1" Opacity="0.9"/>
+                    <TextBox Text="{Binding HighVoltage}" Margin="4,1" Opacity="0.9"/>
+                    <TextBox Text="{Binding LowVoltage}" Margin="4,1" Opacity="0.9"/>
                 </StackPanel>
 
             </Grid>
