--- a/Substation Builder/View/TheveninView.xaml
+++ b/Substation Builder/View/TheveninView.xaml
@@ -49,21 +49,21 @@
                             <ColumnDefinition Width="75"/>
                         </Grid.ColumnDefinitions>
                         <StackPanel Grid.Column="0">
-                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseZ}" Opacity="0.9"/>
                             <RadioButton  GroupName="TheveninUnits" x:Name="UseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
                         </StackPanel>
                         <StackPanel Grid.Column="1">
-                            <TextBox Text="{Binding R1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X1, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X2, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding R0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
-                            <TextBox Text="{Binding X0, StringFormat=\{0:F5\}, UpdateSourceTrigger=PropertyChanged}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X1}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X2}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding R0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
+                            <TextBox Text="{Binding X0}" Margin="4,2" IsEnabled="{Binding IsChecked, ElementName=UseOhm}" Opacity="0.9"/>
                             <RadioButton  GroupName="TheveninUnits" x:Name="UseOhm" Content="Ohms" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,4,0,0"/>
                         </StackPanel>
                     </Grid>
