--- a/Substation Builder/View/Transformer2View.xaml
+++ b/Substation Builder/View/Transformer2View.xaml
@@ -36,9 +36,9 @@
 
                 <StackPanel Grid.Column="1">
                     <RadioButton  GroupName="TransformerUnits" x:Name="XFUseZ" Content="%Z" IsChecked="True" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding z1, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding z0, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
-                    <TextBox Text="{Binding Losses, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" Opacity="0.9"/>
+                    <TextBox Text="{Binding Z1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding Z0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseZ}" Opacity="0.9"/>
+                    <TextBox Text="{Binding Losses}" Margin="4,1" Opacity="0.9"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" Margin="0,26,0,0">
@@ -50,15 +50,15 @@
 
                 <StackPanel Grid.Column="3">
                     <RadioButton  GroupName="TransformerUnits" x:Name="XFUseOhm" Content="Ohms" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4,4,0,4"/>
-                    <TextBox Text="{Binding R1, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X1, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding R0, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
-                    <TextBox Text="{Binding X0, UpdateSourceTrigger=PropertyChanged}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
+                    <TextBox Text="{Binding R1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
+                    <TextBox Text="{Binding X1}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
+                    <TextBox Text="{Binding R0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
+                    <TextBox Text="{Binding X0}" Margin="4,1" IsEnabled="{Binding IsChecked, ElementName=XFUseOhm}" Opacity="0.9"/>
                 </StackPanel>
 
             </Grid>
 
-            <Button Content="Nameplate Data"/>
+            <Button Content="Nameplate Data" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click"/>
         </StackPanel>
 
     </Border>
