--- a/Substation Builder/View/DatabaseView.xaml
+++ b/Substation Builder/View/DatabaseView.xaml
@@ -6,9 +6,11 @@
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       xmlns:vm="clr-namespace:Substation_Builder.ViewModel"
+                      xmlns:Helpers="clr-namespace:Substation_Builder.Helpers"
                       xmlns:views ="clr-namespace:Substation_Builder.View"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                       mc:Ignorable="d"
+                      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                       Icon="..\Resources\Images\MainPageIcon.jpg"    
                       Title="One Line" ResizeMode="CanResizeWithGrip"
                       WindowStartupLocation="Manual"
@@ -32,6 +34,15 @@
         <Style TargetType="{x:Type Controls:MetroTabItem}">
             <Setter Property="Controls:ControlsHelper.HeaderFontSize" Value="15"/>
         </Style>
+
+        <Helpers:BindingProxy x:Key="DataContextProxy" Data="{Binding}"/>
+
+        <!-- Remove Context Menu for Items in the control-->
+        <!-- Incredibly evil as the contextmenu does not share the same datacontext as the treeview so the proxy is employed-->
+        <ContextMenu x:Key="RemoveItemContext" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
+            <MenuItem Header="Delete Item" Command="{Binding Path=Data.RemoveItemCommand, Source={StaticResource DataContextProxy}}" CommandParameter="{Binding}"/>
+        </ContextMenu>
+
     </Controls:MetroWindow.Resources>
 
     <Controls:MetroWindow.Background>
@@ -63,12 +74,12 @@
 
                     <DockPanel HorizontalAlignment="Left">
                         <Menu DockPanel.Dock="Left" VerticalAlignment="Center">
-                            <MenuItem Header="New" FontSize="14">
-                                <MenuItem Header="New Project"/>
-                                <MenuItem Header="New Thevenin"/>
-                                <MenuItem Header="New Transformer"/>
-                                <MenuItem Header="New Relay"/>
-                                <MenuItem Header="New Breaker"/>
+                            <MenuItem Header="New">
+                                <MenuItem Header="New Project" Command="{Binding NewProjectCommand, Mode=OneWay}"/>
+                                <MenuItem Header="Add Thevenin" Command="{Binding AddTheveninCommand, Mode=OneWay}"/>
+                                <MenuItem Header="Add Transformer" Command="{Binding AddTransformerCommand, Mode=OneWay}"/>
+                                <MenuItem Header="Add Relay" Command="{Binding AddRelayCommand, Mode=OneWay}"/>
+                                <MenuItem Header="Add Breaker" Command="{Binding AddBreakerCommand, Mode=OneWay}"/>
                             </MenuItem>
                         </Menu>
 
@@ -81,23 +92,15 @@
                         </ToolBarTray>
                     </DockPanel>
 
-                    <TreeView Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Project}" VerticalAlignment="Top" SelectedItemChanged="LoadPage">
-                        <!-- Remove Context Menu for Items in the control-->
-                        <TreeView.Resources>
-                            <ContextMenu x:Key="RemoveItemContext">
-                                <MenuItem Header="Delete Item" Command="{Binding RemoveItemCommand, Mode=OneWay}" />
-                            </ContextMenu>
-                        </TreeView.Resources>
-                        
-                        <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" Background="{x:Null}">
+                    <TreeView x:Name="treeview" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Project}" VerticalAlignment="Top" SelectedItemChanged="LoadPage">
 
+                        <TreeViewItem x:Name="Subdata" Header="{Binding Project.Name}" Background="{x:Null}">
                             <!-- This is the Header and Treeview Items for Thevenin-->
                             <TreeViewItem Header='Thevenin' ItemsSource="{Binding Project.Thevenins}">
-                                
                                 <!-- This is the reeview Items for Thevenin-->
                                 <TreeViewItem.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}">
+                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown">
                                             <TextBlock.ContextMenu>
                                                 <Binding Mode="OneWay" Source="{StaticResource RemoveItemContext}"/>
                                             </TextBlock.ContextMenu>
@@ -111,7 +114,7 @@
                                 <!-- This is the reeview Items for Transformer-->
                                 <TreeViewItem.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}">
+                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown">
                                             <TextBlock.ContextMenu>
                                                 <Binding Mode="OneWay" Source="{StaticResource RemoveItemContext}"/>
                                             </TextBlock.ContextMenu>
@@ -125,7 +128,7 @@
                                 <!-- This is the reeview Items for Relay-->
                                 <TreeViewItem.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}">
+                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown">
                                             <TextBlock.ContextMenu>
                                                 <Binding Mode="OneWay" Source="{StaticResource RemoveItemContext}"/>
                                             </TextBlock.ContextMenu>
@@ -139,7 +142,7 @@
                                 <!-- This is the reeview Items for Breaker-->
                                 <TreeViewItem.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}">
+                                        <TextBlock Text="{Binding Name}" PreviewMouseRightButtonDown="OnPreviewMouseRightButtonDown">
                                             <TextBlock.ContextMenu>
                                                 <Binding Mode="OneWay" Source="{StaticResource RemoveItemContext}"/>
                                             </TextBlock.ContextMenu>
@@ -170,7 +173,6 @@
         <Controls:MetroTabItem Header="RELAYS" TabIndex="4"/>
 
         <Controls:MetroTabItem Header="CTS" TabIndex="5"/>
-
 
     </Controls:MetroAnimatedSingleRowTabControl>
 
